RESOLVED FIXED152291
REGRESSION (r194022): Production builds of PluginProcess crash on launch when not installed in /System
https://bugs.webkit.org/show_bug.cgi?id=152291
Summary REGRESSION (r194022): Production builds of PluginProcess crash on launch when...
mitz
Reported 2015-12-14 20:36:31 PST
<rdar://problem/23886216> On El Capitan, the legacy processes link normally against the shims, but are still launched with DYLD_INSERT_LIBRARIES pointing to the shim, so when run from a non-/System location, the shim is loaded from the non-/System location thanks to DYLD_INSERT_LIBRARIES. After <http://trac.webkit.org/r194022> changed the install name of the shim, the load command in the main executable points at a non-existent path in /System, so the linker crashes the process. Patch forthcoming.
Attachments
Set DYLD_LIBRARY_PATH to point to where the shims are in non-/System installs (3.29 KB, patch)
2015-12-14 20:52 PST, mitz
darin: review+
buildbot: commit-queue-
Archive of layout-test-results from ews117 for mac-yosemite (770.31 KB, application/zip)
2015-12-14 21:55 PST, Build Bot
no flags
mitz
Comment 1 2015-12-14 20:52:53 PST
Created attachment 267338 [details] Set DYLD_LIBRARY_PATH to point to where the shims are in non-/System installs
Build Bot
Comment 2 2015-12-14 21:55:05 PST
Comment on attachment 267338 [details] Set DYLD_LIBRARY_PATH to point to where the shims are in non-/System installs Attachment 267338 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/560882 New failing tests: imported/w3c/web-platform-tests/streams-api/readable-streams/garbage-collection.html
Build Bot
Comment 3 2015-12-14 21:55:08 PST
Created attachment 267348 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
mitz
Comment 4 2015-12-14 22:08:53 PST
Note You need to log in before you can comment on or make changes to this bug.