<rdar://problem/23886216> REGRESSION (r194022): Production builds of PluginProcess crash on launch when not installed in /System https://bugs.webkit.org/show_bug.cgi?id=152291

Reviewed by Darin Adler.

* Configurations/PluginProcess.xcconfig: Added a FIXME.
* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::addDYLDEnvironmentAdditions): Set DYLD_LIBRARY_PATH to point to where the shims
are. This is needed because starting in El Capitan, the processes’ main executables link
directly against the shims, so the dynamic linker needs to be able to find them in the
non-/System location. Also added a FIXME about not having to set DYLD_INSERT_LIBRARIES when
the main executables link the them directly.



Canonical link: https://commits.webkit.org/170405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194094 268f45cc-cd09-0410-ab3c-d52691b4dbfc